2013-01-22  Thomas Adam <thomas@fvwm.org>
	* fvwm/builtin.c (CMD_Echo):
	* fvwm/misc.c (fvwm_msg):
	* fvwm/move_resize.c (CMD_SnapAttraction, CMD_SnapGrid):
	* fvwm/virtual.c (CMD_EdgeResistance):
	* libs/FRenderInit.c (FRenderGetErrorText):
	Comply with Debian's hardening rules.

	Debian's policy of what's considered "fit for purpos" for inclusion in
	its repositoy of packages says that all compiled programs must pass the
	following:

	CFLAGS="-I/usr/local/include -g -O2 -fstack-protector \
			--param=ssp-buffer-size=4 -Wformat -Werror=format-security" \
	LDFLAGS="-L/usr/local/lib"

	http://wiki.debian.org/HardeningWalkthrough

2013-01-20  Dan Espen  <despen@verizon.net>

	* libs/Flocale.c (FlocaleFreeNameProperty): Don't XFree "Unknown".
	* fvwm/events.c (HandlePropertyNotify): Comment about how new_name is initialized.

2013-01-20  Dan Espen  <despen@verizon.net>

	* libs/FlocaleCharset.c: spelling-error-binary patch
	from Vincent W. Chen Lintain Debian.

2012-07-30  Dan Espen  <despen@verizon.net>

	* NEWS: Added FvwmForm Separators,
	fvwm-desktop-menu fixes.

2012-06-22  Dan Espen  <despen@verizon.net>

	* configure.ac: Set variables for python.

2012-06-16  Thomas Adam  <thomas@fvwm.org>
	* configure.ac:
	* libs/Bindings.c (AddBinding):
	* fvwm/builtins.c (FkeysymToKeycode):
	* fvwm/events.c (__handle_key):
	Add detection of XKeycodeToKeysym as deprecated, and provide a wrapper
	for it by way of fvwm_KeycodeToKeysym() to call the newer
	XkbKeycodeToKeysum() where needed.


2012-05-04  Thomas Adam  <thomas@fvwm.org>
	* libs/PictureImageLoader.c (PImageLoadSvg, PimageLoadXpm,
	  PImageLoadPng):
	  Fix compilation errors.

2012-05-02  Thomas Adam  <thomas@fvwm.org>
	* fvwm/menu.c ( __scan_for_pixmap):
	* libs/PictureImageLoader.c (PImageLoadSvg, PimageLoadXpm,
	  PImageLoadPng):
	Add fvwm_msg() for hints about failed image load.

2012-04-20  Thomas Adam  <thomas@fvwm.org>
	* NEWS:
	* configure.ac:
	Updated for 2.6.6 (CVS HEAD)
